# kvn-tui

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  skills-lock.json
.agents/skills/release/: SKILL.md
.github/workflows/: aur.yml  ci.yml  release.yml
contrib/: install-omarchy.sh  install-polkit.sh  kvn-tui.desktop
pkg/arch/: PKGBUILD  README.md
pkg/aur/: kvn-tui.install  update-aur.sh
src/: app.rs  cli.rs  clipboard.rs  config.rs  daemon.rs  editor.rs  effect.rs  geo.rs  infra.rs  ipc.rs  main.rs  model.rs  msg.rs  paths.rs  process_handle.rs  runtime.rs  services.rs  state_io.rs  suspend.rs  test_helpers.rs  tui_client.rs  update.rs
src/app/: effect.rs  mod.rs  model.rs  msg.rs  services.rs  update.rs
src/clipboard/: mod.rs
src/config/: mod.rs  profile.rs  singbox.rs
src/editor/: mod.rs
src/geo/: mod.rs
src/infra/: clipboard.rs  editor.rs  geo.rs  paths.rs  user_env.rs
src/input/: mod.rs
src/services/: log_tailer.rs  state_io.rs  suspend.rs  waybar.rs
src/singbox/: config.rs  mod.rs  runner.rs
src/ui/: layout.rs  mod.rs  nav.rs  styles.rs  widgets.rs
src/ui/snapshots/: kvn_tui__ui__layout__tests__draw_confirm_delete_overlay_snapshot.snap  kvn_tui__ui__layout__tests__draw_confirm_quit_overlay_snapshot.snap  kvn_tui__ui__layout__tests__draw_error_overlay_snapshot.snap  kvn_tui__ui__layout__tests__draw_geo_region_overlay_snapshot.snap  kvn_tui__ui__layout__tests__draw_help_overlay_snapshot.snap  kvn_tui__ui__layout__tests__draw_input_modal_overlay_snapshot.snap  kvn_tui__ui__layout__tests__draw_main_snapshot.snap  kvn_tui__ui__layout__tests__draw_paste_uri_overlay_snapshot.snap  kvn_tui__ui__layout__tests__draw_routing_mode_overlay_snapshot.snap  kvn_tui__ui__widgets__tests__profile_list_snapshot.snap  kvn_tui__ui__widgets__tests__status_bar_connected_auto_snapshot.snap  kvn_tui__ui__widgets__tests__status_bar_connected_snapshot.snap  kvn_tui__ui__widgets__tests__status_bar_geo_updating_snapshot.snap  kvn_tui__ui__widgets__tests__status_bar_long_message_truncated_snapshot.snap
