[package]
name = "kvn-tui"
version = "0.10.1"
edition = "2024"
authors = ["Dmitry Yarikov <dmitry@yarikov.com>"]
description = "Terminal VPN client for Arch Linux + Wayland with vim navigation"
license = "MIT"
repository = "https://github.com/yarikov/kvn-tui"
rust-version = "1.87"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.9", features = ["v4", "serde"] }

# HTTP client for geo database downloads
ureq = { version = "3", features = ["rustls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Directories
dirs = "6.0"

# URL parsing
url = "2.5"

# Chrono for timestamps
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }

# URL encoding / decoding
urlencoding = "2.1"

# D-Bus integration for suspend/resume detection (systemd-logind)
zbus = { version = "5", default-features = false, features = ["blocking-api", "async-io"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Signal handling for graceful shutdown
signal-hook = "0.3"

# Unix UID for fallback socket path
libc = "0.2"

[dev-dependencies]
insta = "1.47.2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
